--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Darth Vader</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <title>Biografia</title>
+  <link rel="stylesheet" href="../css/style.css">
   <style>
 
   </style>
@@ -13,19 +13,19 @@
 <body>
   <div class="container">
     <header>
-      <img src="./img/capa.jpg" alt="">
+      <img src="../img/capa.jpg" alt="">
     </header>
 
     <nav class="nav">
-      <a class="nav-link" href="./index.html">HOME</a>
-      <a class="nav-link" href="./pages/biografia.html">BIOGRAFIA</a>
-      <a class="nav-link" href="./pages/campanhaPubli.html">CAMPANHAS PUBLICITÁRIAS</a>
-      <a class="nav-link" href="./pages/contato.html">CONTATO</a>
+      <a class="nav-link" href="../index.html">HOME</a>
+      <a class="nav-link" href="../pages/biografia.html">BIOGRAFIA</a>
+      <a class="nav-link" href="../pages/campanhaPubli.html">CAMPANHAS PUBLICITÁRIAS</a>
+      <a class="nav-link" href="../pages/contato.html">CONTATO</a>
     </nav>
 
     <main>
       <article>
-        <h1>Sobre o Darth Vader</h1>
+        <h1>Biografia do Darth Vader</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, exercitationem quia consequatur vitae ad tenetur impedit non reprehenderit, eaque repudiandae assumenda sunt iure! Ducimus blanditiis laboriosam necessitatibus vitae voluptatibus impedit?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem necessitatibus dignissimos ullam consequatur porro eveniet inventore quos deleniti, nesciunt unde, tempora quasi velit libero vel qui. Alias vitae unde consequatur?</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam odit repellat reprehenderit maxime? Doloribus error enim, dicta minus dolorem similique eos! Culpa aspernatur hic eligendi ad sed officia eum obcaecati?</p>
